2002-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* Menubar_pimpl.C: make it compile again
 
2002-07-24  John Levon  <moz@compsoc.man.ac.uk>

	* Menubar_pimpl.C: make it compile again
 
2002-07-24  Angus Leeming  <leeming@lyx.org>

	* FileDialog_private.C (done): add a false to the arguments passed to
	getLyXFunc.

	* QBibtex.C:
	* QCommandBuffer.C: add a using std::vector directive.

	* QBibtexDialog.C: s/<vector.h>/<vector>/

	* QCommandBuffer.C: remove trailing semi-colon at the end of the
	namespace scope.

	* QTexinfo.h: s/vector<string>/std::vector<string>/

2002-07-23  Edwin Leuven <leuven@fee.uva.nl>

	* QBibtex.C: syle combobox instead of listbox
	* QBibtexDialog.C:
	* ui/QBibtexDialog.ui
	* QTexinfo.C: Repair view without path/selection
	* QTexinfo.h
	* QTexinfoDialog.C
	* QTexinfoDialog.h
	* ui/QTexinfoDialog.ui
	* ui/QCitationDialog.ui: layout fix
	* ui/QExternalDialog.ui: idem
	* TODO: update
	
2002-07-23  John Levon  <moz@compsoc.man.ac.uk>

	* QCommandBuffer.C: real compile fix
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* QLyXKeySym.C: return 0 when text_ is empty
	  for getISOEncoded() 

2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* QCommandBuffer.C: probably compile fix

	* QtView.C:
	* Toolbar_pimpl.h:
	* Toolbar_pimpl.C: remove dead code
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* lyx_gui.C: add exit() so we don't busy loop !
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* QCommandEdit.C: complete if right at end of line
 
	* QLyXKeySym.C: cleanup comments
 
	* QtView.C: prefer const int
 
	* qlkey.h: fix some transliteration errors...
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* Toolbar_pimpl.h:
	* Toolbar_pimpl.C: remove ->push()
 
2002-07-22  Edwin Leuven  <leuven@fee.uva.nl>

	* QCitationDialog.C: fix loop search and info update after selecting
	* TODO: remove this is issue

2002-07-22  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QBibtexDialog.ui: style browser
	* QBibtex.C: idem
	* QBibtexDialog.C: idem
	