@@ -1,3 +1,8 @@
+2002-07-25  John Levon  <levon@movementarian.org>
+
+	* Menubar_pimpl.C: split create/fill of menus into
+	  two functions
+ 
 2002-07-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Menubar_pimpl.C: make it compile again
